SUBDIRS =		\
	reference

EXTRA_DIST =						\
	configuration.rd				\
	configuration.rd.ja				\
	introduction.rd					\
	introduction.rd.ja				\
	install.rd					\
	install.rd.ja					\
	install-to-ubuntu.rd				\
	install-to-ubuntu.rd.ja				\
	install-to-centos.rd				\
	install-to-centos.rd.ja				\
	install-to-freebsd.rd				\
	install-to-freebsd.rd.ja			\
	install-to-others.rd				\
	install-to-others.rd.ja				\
	admin-applicable-condition-ja.png		\
	admin-applicable-condition.png			\
	admin-milters-ja.png				\
	admin-milters.png				\
	milter-manager-admin-ja.svg			\
	milter-manager-admin.svg			\
	mta-and-milter-manager-and-child-milter-ja.svg	\
	mta-and-milter-manager-and-child-milter.svg	\
	sendmail-and-milter-ja.svg			\
	sendmail-and-milter.svg				\
	sendmail-and-postfix-and-milter-ja.svg		\
	sendmail-and-postfix-and-milter.svg		\
	mail.day.png					\
	session.day.png					\
	stop.day.png					\
	milter-manager-log-analyzer-graphs.svg
